[project]
name = "bquest"
version = "0.5.6"
description = "Effortlessly validate and test your Google BigQuery queries with the power of pandas DataFrames in Python."
authors = [{ name = "Otto Group data.works GmbH" }]
requires-python = ">=3.10,<4.0"
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "open-source",
    "google-big-query",
    "query",
    "sql",
    "testing",
    "pandas",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Utilities",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "google-cloud-bigquery[bqstorage, pandas]>=3.8",
    "pandas>=2.0",
    "pandas-gbq>=0.19",
    "sqlvalidator>=0.0.20",
]

[project.urls]
Repository = "https://github.com/ottogroup/bquest"
Documentation = "https://ottogroup.github.io/bquest/"
Issues = "https://github.com/ottogroup/bquest/issues"
Releases = "https://github.com/ottogroup/bquest/releases"

[dependency-groups]
dev = [
    "creosote>=4.0.0",
    "mypy>=1.3.0",
    "pip-audit>=2.8.0",
    "poethepoet>=0.20.0",
    "ruff>=0.2.2",
    "types-mock>=5.0.0.6",
    "zizmor>=1.3.1",
]
test = [
    "coverage[toml]>=6.0",
    "mock>=5.0.2",
    "pytest>=7.3.1",
    "pytest-cov>=4.0",
]
docs = [
    "mike>=1.1.2",
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.15",
    "mkdocstrings-python>=1.1.2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
    "docs",
]
required-version=">=0.6.0"

[tool.hatch.build.targets.sdist]
include = [
    "bquest",
    "LICENSE",
    "CHANGELOG.rst",
]

[tool.hatch.build.targets.wheel]
include = [
    "bquest",
    "LICENSE",
    "CHANGELOG.rst",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # Bandit
    "S",
    # Bugbear
    "B",
    # Builtins
    "A",
    # comprehensions
    "C4",
    # eradicate
    "ERA",
    # flake8-2020
    "YTT",
    # isort
    "I",
    # print
    "T20",
    # Pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # return
    "RET",
]
unfixable = ["ERA", "F401", "F841", "T20", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.poe.tasks]
# Linting and formatting.
lint = [
    { cmd = "ruff check ." },
    { cmd = "ruff format --check bquest tests" },
]

format = [
    { cmd = "ruff format bquest tests" },
    { cmd = "ruff check --fix bquest tests" },
]

type = "mypy --ignore-missing-imports --strict bquest"

check_vulnerable_dependencies = "pip-audit"
check_unused_dependencies = "creosote"
check_githubactions = "zizmor .github/workflows/"


test_unit = "pytest -m unit"
test_integration = "pytest -m integration"
test = ["test_unit", "test_integration"]

[tool.pytest.ini_options]
log_level = "DEBUG"
markers = [
    "integration: integration tests",
    "unit: unit tests"
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bquest"]

[tool.coverage.report]
show_missing = true
fail_under = 0
omit = [
    "tests/*",
]

[tool.creosote]
venvs=[".venv"]
paths=["bquest", "tests"]
deps-file="pyproject.toml"
sections=["project.dependencies"]
exclude-deps=["pandas-gbq"]
